--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "symfony/console": "^3.2"
+        "symfony/console": "^3.2||^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -8,6 +8,7 @@
         }
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.0",
+        "phpstan/phpstan": "^0.9"
     }
 }
