--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
     - stage: composer validate
       php: 7.1
       install: skip
-      script: composer validate --strict
+      script: composer validate
 
     - stage: check coding style
       php: 7.1
