--- a/tests/browser-detector/build
+++ b/tests/browser-detector/build
@@ -5,6 +5,8 @@ error_reporting(E_ERROR | E_WARNING | E_PARSE);
 
 $allTests = [];
 
+require_once __DIR__ . '/vendor/autoload.php';
+
 $jsonParser = new \Seld\JsonLint\JsonParser();
 
 $finder = new \Symfony\Component\Finder\Finder();
