implement Symfony/Finder, add Mappings for BrowserDetector

--- a/tests/browscap/build
+++ b/tests/browscap/build
@@ -3,11 +3,24 @@
 
 $tests = [];
 
-foreach (new FilesystemIterator(__DIR__ . '/vendor/browscap/browscap/tests/issues') as $fixture) {
-    if ($fixture->getFilename() === 'issue-000-invalids.php') {
+require_once __DIR__ . '/vendor/autoload.php';
+
+$finder = new \Symfony\Component\Finder\Finder();
+$finder->files();
+$finder->name('*.php');
+$finder->ignoreDotFiles(true);
+$finder->ignoreVCS(true);
+$finder->sortByName();
+$finder->ignoreUnreadableDirs();
+$finder->in(__DIR__ . '/vendor/browscap/browscap/tests/issues');
+
+foreach ($finder as $fixture) {
+    /** @var \Symfony\Component\Finder\SplFileInfo $fixture */
+    if (!$fixture->isFile() || 'php' !== $fixture->getExtension()) {
         continue;
     }
-    if ($fixture->getFilename() === 'issue-000-invalid-versions.php') {
+
+    if (in_array($fixture->getFilename(), array('issue-000-invalids.php', 'issue-000-invalid-versions.php'))) {
         continue;
     }
 
