--- a/tests/ua-parser/build
+++ b/tests/ua-parser/build
@@ -123,17 +123,28 @@ function processFixture($fixture, &$tests, $cache)
     }
 }
 
-foreach (new FilesystemIterator(__DIR__ . '/node_modules/uap-core/tests') as $fixture) {
-    if (substr($fixture->getFilename(), -4) == 'yaml') {
-        processFixture($fixture, $tests, $cache);
-    }
-}
-
+$finder = new \Symfony\Component\Finder\Finder();
+$finder->files();
+$finder->name('*.yaml');
+$finder->ignoreDotFiles(true);
+$finder->ignoreVCS(true);
+$finder->sortByName();
+$finder->ignoreUnreadableDirs();
+$finder->in(__DIR__ . '/node_modules/uap-core/tests');
 // Supplemental files in tests_resources dir
-foreach (new FilesystemIterator(__DIR__ . '/node_modules/uap-core/test_resources') as $fixture) {
-    if (substr($fixture->getFilename(), -4) == 'yaml' && $fixture->getFilename() != 'pgts_browser_list-orig.yaml') {
-        processFixture($fixture, $tests, $cache);
+$finder->in(__DIR__ . '/node_modules/uap-core/test_resources');
+
+foreach ($finder as $fixture) {
+    /** @var \Symfony\Component\Finder\SplFileInfo $fixture */
+    if (!$fixture->isFile() || 'yaml' !== $fixture->getExtension()) {
+        continue;
     }
+    
+    if ($fixture->getFilename() === 'pgts_browser_list-orig.yaml') {
+        continue;
+    }
+
+    processFixture($fixture, $tests, $cache);
 }
 
 print json_encode([
