--- a/tests/donatj/build
+++ b/tests/donatj/build
@@ -3,7 +3,24 @@
 
 $tests = [];
 
-$provider = json_decode(file_get_contents(__DIR__ . '/vendor/donatj/phpuseragentparser/Tests/user_agents.json'), true);
+require_once __DIR__ . '/vendor/autoload.php';
+
+$jsonParser = new \Seld\JsonLint\JsonParser();
+
+$content = file_get_contents(__DIR__ . '/vendor/donatj/phpuseragentparser/Tests/user_agents.json');
+
+if ('' === $content || PHP_EOL === $content) {
+    exit;
+}
+
+try {
+    $provider = $jsonParser->parse(
+        $content,
+        JsonParser::DETECT_KEY_CONFLICTS | JsonParser::PARSE_TO_ASSOC
+    );
+} catch (\Seld\JsonLint\ParsingException $e) {
+    exit;
+}
 
 foreach ($provider as $ua => $data) {
     if (!empty($ua)) {
