--- a/tests/endorphin/build
+++ b/tests/endorphin/build
@@ -5,7 +5,21 @@ $uas = [];
 
 require_once __DIR__ . '/vendor/autoload.php';
 
-foreach (new FilesystemIterator(__DIR__ . '/vendor/endorphin-studio/browser-detector/tests/data/ua') as $fixture) {
+$finder = new \Symfony\Component\Finder\Finder();
+$finder->files();
+$finder->name('*.xml');
+$finder->ignoreDotFiles(true);
+$finder->ignoreVCS(true);
+$finder->sortByName();
+$finder->ignoreUnreadableDirs();
+$finder->in(__DIR__ . '/vendor/endorphin-studio/browser-detector/tests/data/ua');
+
+foreach ($finder as $fixture) {
+    /** @var \Symfony\Component\Finder\SplFileInfo $fixture */
+    if (!$fixture->isFile() || 'xml' !== $fixture->getExtension()) {
+        continue;
+    }
+
     $provider = simplexml_load_file($fixture->getPathname());
 
     foreach ($provider->test as $test) {
