--- a/tests/woothee/build
+++ b/tests/woothee/build
@@ -7,7 +7,21 @@ require_once __DIR__ . '/vendor/autoload.php';
 
 $tests = [];
 
-foreach (new FilesystemIterator(__DIR__ . '/vendor/woothee/woothee-testset/testsets') as $fixture) {
+$finder = new \Symfony\Component\Finder\Finder();
+$finder->files();
+$finder->name('*.yaml');
+$finder->ignoreDotFiles(true);
+$finder->ignoreVCS(true);
+$finder->sortByName();
+$finder->ignoreUnreadableDirs();
+$finder->in(__DIR__ . '/vendor/woothee/woothee-testset/testsets');
+
+foreach ($finder as $fixture) {
+    /** @var \Symfony\Component\Finder\SplFileInfo $fixture */
+    if (!$fixture->isFile() || 'yaml' !== $fixture->getExtension()) {
+        continue;
+    }
+
     $provider = Spyc::YAMLLoad($fixture->getPathname());
 
     foreach ($provider as $data) {
