--- a/tests/yzalis/build
+++ b/tests/yzalis/build
@@ -27,35 +27,49 @@ $base = [
     ]
 ];
 
-foreach (new FilesystemIterator(__DIR__ . '/vendor/yzalis/ua-parser/tests/UAParser/Tests/Fixtures') as $fixture) {
-    if (substr($fixture->getFilename(), -3) == 'yml') {
-        $providerName = $fixture->getFilename();
-        $provider     = Spyc::YAMLLoad($fixture->getPathname());
+require __DIR__ . '/vendor/autoload.php';
 
-        foreach ($provider as $data) {
-            $ua = $data[0];
+$finder = new \Symfony\Component\Finder\Finder();
+$finder->files();
+$finder->name('*.yml');
+$finder->ignoreDotFiles(true);
+$finder->ignoreVCS(true);
+$finder->sortByName();
+$finder->ignoreUnreadableDirs();
+$finder->in(__DIR__ . '/vendor/yzalis/ua-parser/tests/UAParser/Tests/Fixtures');
 
-            if (!isset($uas[$ua])) {
-                $uas[$ua] = $base;
-            }
+foreach ($finder as $fixture) {
+    /** @var \Symfony\Component\Finder\SplFileInfo $fixture */
+    if (!$fixture->isFile() || 'yml' !== $fixture->getExtension()) {
+        continue;
+    }
 
-            switch ($providerName) {
-                case 'browsers.yml':
-                    $uas[$ua]['browser']['name']    = $data[1];
-                    $uas[$ua]['browser']['version'] = $data[2] . '.' . $data[3] . '.' . $data[4];
-                    break;
-                case 'devices.yml':
-                    $uas[$ua]['device']['name']  = $data[2];
-                    $uas[$ua]['device']['brand'] = $data[1];
-                    $uas[$ua]['device']['type']  = $data[3];
-                    break;
-                case 'operating_systems.yml':
-                    $uas[$ua]['platform']['name']    = $data[1];
-                    $uas[$ua]['platform']['version'] = $data[2] . (null !== $data[3] ? '.' . $data[3] . (null !== $data[4] ? '.' . $data[4] : '') : '');
-                    break;
-                // Skipping rendering_engines.yml because we don't look at Engine data
-                // Skipping other files because we dont test this
-            }
+    $providerName = $fixture->getFilename();
+    $provider     = Spyc::YAMLLoad($fixture->getPathname());
+
+    foreach ($provider as $data) {
+        $ua = $data[0];
+
+        if (!isset($uas[$ua])) {
+            $uas[$ua] = $base;
+        }
+
+        switch ($providerName) {
+            case 'browsers.yml':
+                $uas[$ua]['browser']['name']    = $data[1];
+                $uas[$ua]['browser']['version'] = $data[2] . '.' . $data[3] . '.' . $data[4];
+                break;
+            case 'devices.yml':
+                $uas[$ua]['device']['name']  = $data[2];
+                $uas[$ua]['device']['brand'] = $data[1];
+                $uas[$ua]['device']['type']  = $data[3];
+                break;
+            case 'operating_systems.yml':
+                $uas[$ua]['platform']['name']    = $data[1];
+                $uas[$ua]['platform']['version'] = $data[2] . (null !== $data[3] ? '.' . $data[3] . (null !== $data[4] ? '.' . $data[4] : '') : '');
+                break;
+            // Skipping rendering_engines.yml because we don't look at Engine data
+            // Skipping other files because we dont test this
         }
     }
 }
