improve mapping and detection

--- a/parsers/piwik-device-detector-php-3/composer.json
+++ b/parsers/piwik-device-detector-php-3/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "piwik/device-detector": "^3.7.5",
+        "piwik/device-detector": "dev-master",
         "thadafinser/package-info": "^1.0",
         "mimmi20/json-class": "~2.0.1"
     }
