--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1459,6 +1459,32 @@ updates:
   #        versions:
   #          - ">= 0"
 
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "05:30"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 10
+    reviewers:
+      - "mimmi20"
+    assignees:
+      - "mimmi20"
+    labels:
+      - "dependencies"
+    versioning-strategy: increase
+    commit-message:
+      include: "scope"
+      prefix: "composer"
+  #    ignore:
+  #      - dependency-name: infection/infection
+  #        versions:
+  #          - ">= 0"
+  #      - dependency-name: phpunit/phpunit
+  #        versions:
+  #          - ">= 0"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
