--- a/parsers/browscap-php-5-lite/composer.json
+++ b/parsers/browscap-php-5-lite/composer.json
@@ -3,7 +3,9 @@
         "php": "^7.4.3",
         "composer-runtime-api": "*",
         "browscap/browscap-php": "^5.0.0",
-        "psr/log": "^1.1.4"
+        "psr/log": "^1.1.4",
+        "symfony/console": "^v5.4.0",
+        "symfony/filesystem": "^v5.4.0"
     },
     "config": {
         "preferred-install": "dist",
