--- a/parsers/endorphin-php-5/composer.json
+++ b/parsers/endorphin-php-5/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "php": "^7.4.3",
         "composer-runtime-api": "*",
-        "endorphin-studio/browser-detector": "5.0.0"
+        "endorphin-studio/browser-detector": "5.0.0",
+        "symfony/http-foundation": "^v5.4.0",
+        "symfony/yaml": "^v5.4.0"
     },
     "config": {
         "preferred-install": "dist",
