--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
         "ext-simplexml": "*",
         "composer-runtime-api": "^2.0",
         "ramsey/uuid": "^4.2.3",
-        "symfony/console": "^v6.0.1"
+        "symfony/console": "^v6.0.2"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.0.0",
         "mimmi20/coding-standard": "^2.6.0",
         "phpstan/extension-installer": "^1.1.0",
-        "phpstan/phpstan": "^1.3.0",
+        "phpstan/phpstan": "^1.3.3",
         "phpstan/phpstan-deprecation-rules": "^1.0.0",
-        "vimeo/psalm": "^v4.17.0"
+        "vimeo/psalm": "^v4.18.1"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -31,7 +31,12 @@
     },
     "config": {
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true,
+            "composer/package-versions-deprecated": true
+        }
     },
     "scripts": {
         "php-cs-fixer-check": "php-cs-fixer fix --dry-run -vv",
