--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,7 @@ updates:
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -17,7 +16,7 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       include: "scope"
       prefix: "composer"
@@ -32,8 +31,7 @@ updates:
   - package-ecosystem: "composer"
     directory: "tests/browscap/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -43,15 +41,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/browscap"
 
   - package-ecosystem: "composer"
     directory: "tests/browser-detector/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -61,15 +58,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/browser-detector"
 
   - package-ecosystem: "composer"
     directory: "tests/curated/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -79,15 +75,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/curated"
 
   - package-ecosystem: "composer"
     directory: "tests/donatj/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -97,15 +92,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/donatj"
 
   - package-ecosystem: "composer"
     directory: "tests/endorphin/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -115,15 +109,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/endorphin"
 
   - package-ecosystem: "composer"
     directory: "tests/matomo/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -133,15 +126,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/matomo"
 
   - package-ecosystem: "composer"
     directory: "tests/sinergi/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -151,15 +143,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/sinergi"
 
   - package-ecosystem: "composer"
     directory: "tests/ua-parser/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -169,15 +160,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/ua-parser"
 
   - package-ecosystem: "composer"
     directory: "tests/ua-parser-js/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -187,15 +177,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/ua-parser-js"
 
   - package-ecosystem: "composer"
     directory: "tests/whichbrowser/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -205,15 +194,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/whichbrowser"
 
   - package-ecosystem: "composer"
     directory: "tests/woothee/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -223,15 +211,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/woothee"
 
   - package-ecosystem: "composer"
     directory: "tests/zsxsoft/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -241,15 +228,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "composer/tests/zsxsoft"
 
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -259,15 +245,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm"
 
   - package-ecosystem: "npm"
     directory: "tests/ua-parser/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -277,15 +262,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm/tests/ua-parser"
 
   - package-ecosystem: "npm"
     directory: "tests/ua-parser-js/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -295,15 +279,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm/tests/ua-parser-js"
 
   - package-ecosystem: "npm"
     directory: "parsers/3rd-eden-useragent-js-2/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -313,15 +296,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm/parsers/3rd-eden-useragent-js-2"
 
   - package-ecosystem: "npm"
     directory: "parsers/bowser-js-2/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -331,15 +313,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm/parsers/bowser-js-2"
 
   - package-ecosystem: "npm"
     directory: "parsers/browser-detect-js-0/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
@@ -349,15 +330,14 @@ updates:
       - "mimmi20"
     labels:
       - "dependencies"
-    versioning-strategy: increase
+    versioning-strategy: "widen"
     commit-message:
       prefix: "npm/parsers/browser-detect-js-0"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: "daily"
       time: "05:30"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 10
