--- a/parsers/browscap-php/composer.json
+++ b/parsers/browscap-php/composer.json
@@ -2,12 +2,12 @@
   "require": {
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0.0",
-    "browscap/browscap-php": "^5.0.0 || ^6.1.0",
-    "psr/log": "^1.1.4 || ^3.0.0",
-    "symfony/console": "^v5.4.3 || ^v6.0.3",
-    "symfony/filesystem": "^v5.4.3 || ^v6.0.3",
+    "browscap/browscap-php": "^7.0.0",
+    "psr/log": "^3.0.0",
+    "symfony/console": "^v6.1.0",
+    "symfony/filesystem": "^v6.1.0",
     "matthiasmullie/scrapbook": "^1.4.8",
-    "league/flysystem": "^2.3.2 || ^3.0.7"
+    "league/flysystem": "^3.0.20"
   },
   "config": {
     "preferred-install": "dist",
