--- a/parsers/browser-detector/composer.json
+++ b/parsers/browser-detector/composer.json
@@ -1,10 +1,10 @@
 {
   "require": {
     "php": "^8.1.0",
-    "composer-runtime-api": "^2.0",
+    "composer-runtime-api": "^2.0.0",
     "mimmi20/browser-detector": "^7.0.2",
-    "psr/log": "^1.1.4 || ^3.0.0",
-    "monolog/monolog": "^2.3.5",
+    "psr/log": "^3.0.0",
+    "monolog/monolog": "^3.0.0",
     "matthiasmullie/scrapbook": "^1.4.8"
   },
   "config": {
