--- a/parsers/endorphin/composer.json
+++ b/parsers/endorphin/composer.json
@@ -1,9 +1,9 @@
 {
   "require": {
     "php": "^8.1.0",
-    "composer-runtime-api": "^2.0",
+    "composer-runtime-api": "^2.0.0",
     "endorphin-studio/browser-detector": "^6.0.1",
-    "symfony/yaml": "^v5.4.3 || ^v6.0.3"
+    "symfony/yaml": "^v6.1.0"
   },
   "config": {
     "preferred-install": "dist",
