--- a/parsers/browser-detector/composer.json
+++ b/parsers/browser-detector/composer.json
@@ -4,11 +4,12 @@
     "composer-runtime-api": "^2.0.0",
     "mimmi20/browser-detector": "^7.0.2",
     "psr/log": "^3.0.0",
-    "monolog/monolog": "^3.0.0",
+    "monolog/monolog": "^3.2.0",
     "matthiasmullie/scrapbook": "^1.4.8"
   },
   "config": {
     "preferred-install": "dist",
+    "lock": false,
     "sort-packages": true
   },
   "minimum-stability": "stable",
