--- a/parsers/donatj/composer.json
+++ b/parsers/donatj/composer.json
@@ -2,10 +2,11 @@
   "require": {
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0.0",
-    "donatj/phpuseragentparser": "^v1.6.0"
+    "donatj/phpuseragentparser": "^v1.6.1"
   },
   "config": {
     "preferred-install": "dist",
+    "lock": false,
     "sort-packages": true
   },
   "minimum-stability": "stable",
