--- a/parsers/endorphin/composer.json
+++ b/parsers/endorphin/composer.json
@@ -3,10 +3,11 @@
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0.0",
     "endorphin-studio/browser-detector": "^6.0.1",
-    "symfony/yaml": "^v6.1.0"
+    "symfony/yaml": "^v6.1.3"
   },
   "config": {
     "preferred-install": "dist",
+    "lock": false,
     "sort-packages": true
   },
   "minimum-stability": "stable",
