--- a/parsers/matomo/composer.json
+++ b/parsers/matomo/composer.json
@@ -2,14 +2,12 @@
   "require": {
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0.0",
-    "cbschuld/browser.php": "^v1.9.6",
-    "mimmi20/browscap-helper-source": "^3.0.12"
+    "matomo/device-detector": "^6.0.2",
+    "matthiasmullie/scrapbook": "^1.4.8"
   },
   "config": {
-    "preferred-install": {
-      "cbschuld/browser.php": "source",
-      "*": "dist"
-    },
+    "preferred-install": "dist",
+    "lock": false,
     "sort-packages": true
   },
   "minimum-stability": "stable",
