--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -22,6 +22,7 @@ DISABLE_LINTERS:
   - YAML_YAMLLINT
   - YAML_PRETTIER
   - MARKDOWN_MARKDOWNLINT
+  - EDITORCONFIG_EDITORCONFIG_CHECKER
 EDITORCONFIG_EDITORCONFIG_CHECKER_FILTER_REGEX_EXCLUDE: "(\\.idea|\\.editorconfig|\\.github|\\.phpunit\\.result\\.cache|LICENSE)"
 JSON_PRETTIER_FILTER_REGEX_EXCLUDE: "(composer\\.json)"
 MARKDOWN_MARKDOWNLINT_FILTER_REGEX_EXCLUDE: "(\\.github)"
